# api.tokenbowl.ai

./: .env.example  .env.local  .gitignore  CENTRIFUGO_MIGRATION_PLAN.md  CLAUDE.md  INTEGRATION_TESTING.md  Makefile  POSTGRES_MIGRATION_CHECKLIST.md  POSTGRES_MIGRATION_ESTIMATE.md  PRODUCTION_DEPLOYMENT.md  RBAC_IMPLEMENTATION_PLAN.md  README.md  SECURITY.md  SYSTEMD_MANAGEMENT.md  alembic.ini  centrifugo-config.json  chat.db.backup  deploy_production.sh  deploy_without_docker.sh  diagnose_centrifugo.py  docker-compose.production.yml  docker-compose.yml  generate_production_secrets.sh  nginx.production.conf  openapi.json  pyproject.toml  pytest.ini  test_auth_flow.sh  test_centrifugo.sh  test_centrifugo_integration.py
.claude/commands/: release.md
.github/workflows/: ci.yml  deploy.yml
alembic/versions/: 182ab482e2ea_add_admin_field_to_users.py  207a158c2988_add_description_column_to_conversations_.py  369c2ed889c0_initial_schema.py  4e6bb17001fc_add_conversations_table.py  75bb90356bb0_add_role_field.py  898318f0d680_add_read_receipts_table.py  8a8f924e80ba_add_created_by_and_delete_existing_bots.py  ad13e5cd9cce_add_user_id_uuid_primary_key.py  c999aae537bc_add_bot_and_emoji_fields.py
deployment/: README.md  check-deploy.sh  deploy.sh  token-bowl-chat.service  token-bowl-deploy.service  token-bowl-deploy.timer
docs/: API_GUIDE.md  QUICK_REFERENCE.md  README.md  WEBSOCKET_HEARTBEAT.md
examples/: rest_client.py  test_heartbeat.py  webhook_server.py  websocket_client.py
public/: test_centrifugo.html
scripts/: export_openapi.py  install-hooks.sh  pre-commit
src/token_bowl_chat_server/: __init__.py  __main__.py  api.py  auth.py  centrifugo_client.py  config.py  models.py  server.py  storage.py  stytch_client.py  webhook.py  websocket.py  websocket_heartbeat.py
tests/: __init__.py  conftest.py  test_admin_websocket_health.py  test_api.py  test_auth.py  test_bots.py  test_centrifugo.py  test_centrifugo_integration.py  test_conversations.py  test_multiple_websocket_connections.py  test_rbac.py  test_read_receipts.py  test_server.py  test_storage.py  test_version.py  test_viewer.py  test_webhook.py  test_websocket.py
